Added Assets folder and an application icon. Updated project settings.

--- a/Dirt3TelemetryDisplay/Dirt3TelemetryDisplay.csproj
+++ b/Dirt3TelemetryDisplay/Dirt3TelemetryDisplay.csproj
@@ -4,6 +4,10 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
+    <Authors>Sztorm</Authors>
+    <ApplicationIcon>../Assets/Icon.ico</ApplicationIcon>
+    <SignAssembly>false</SignAssembly>
+    <AssemblyOriginatorKeyFile />
   </PropertyGroup>
 
 </Project>
